--- a/Assignment/Assignment-01-Jul04.ipynb
+++ b/Assignment/Assignment-01-Jul04.ipynb
@@ -130,7 +130,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOur Solution here"
+    "# YOur Solution here\n",
+    "\n",
+    "# YOur Solution here\n",
+    "def write_to_file(filename,content):\n",
+    "    with open(filename,'w') as file:\n",
+    "        file.write(content)\n",
+    "        print(f\"content written to {Filename}\")\n",
+    "\n",
+    "\n",
+    "def read_from_file(filename):\n",
+    "   with open(filename,'r')as file:\n",
+    "        content = file.read()\n",
+    "        print(f\"content of {filename}:\")\n",
+    "        print(content)\n",
+    "       \n",
+    "write_to_file(\"greeting.txt\",Hello, bass)\n",
+    "read_from_file(\"greeting.txt\")"
    ]
   },
   {
@@ -151,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,11 +232,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('The Grand Design', 'Science', 2010, 90),\n",
+       " ('The Theory of Everything', 'Science', 2002, 100),\n",
+       " ('A Brief History of Time', 'Science', 1988, 150),\n",
+       " ('To Kill a Mockingbird', 'Fiction', 1960, 180),\n",
+       " ('1984', 'Fiction', 1949, 190),\n",
+       " ('Pride and Prejudice', 'Fiction', 1813, 200),\n",
+       " ('Angels & Demons', 'Mystery', 2000, 210),\n",
+       " ('The Catcher in the Rye', 'Fiction', 1991, 220),\n",
+       " ('The Alchemist', 'Fiction', 1988, 250),\n",
+       " ('The Da Vinci Code', 'Mystery', 2003, 300)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your Solution Here\n"
+    "# Your Solution Here\n",
+    "sorted(books, key = lambda book : book[-1])"
    ]
   },
   {
