--- a/Assignment/Assignment-02-Jul11.ipynb
+++ b/Assignment/Assignment-02-Jul11.ipynb
@@ -18,9 +18,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your Solution Here\n"
+    "palindrome = lambda s: s == s[::-1]\n",
+    "input_str = \"level\"\n",
+    "\n",
+    "print(palindrome(input_str))"
    ]
   },
   {
@@ -47,11 +58,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, Armstrong number.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your Solution Here\n"
+    "def is_armstrong(number):\n",
+    "    num_str = str(number)\n",
+    "    num_digits = len(num_str)\n",
+    "\n",
+    "    armstrong_sum = sum(int(digit) ** num_digits for digit in num_str)\n",
+    "    if armstrong_sum == number:\n",
+    "        return \"Yes, Armstrong number.\"\n",
+    "    else:\n",
+    "        return \"No, Armstrong number.\"\n",
+    "num = int(input(\"Enter a positive integer: \"))\n",
+    "\n",
+    "if num > 0:\n",
+    "    print(is_armstrong(num))\n",
+    "else:\n",
+    "    print(\"Please enter a positive integer.\")"
    ]
   },
   {
@@ -73,9 +106,138 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Number Guessing Game!\n",
+      "Think of a number between 1 and 100.\n",
+      "You have 7 attempts to guess it.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attempt 1: Enter your guess:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too low! Try a higher number.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attempt 2: Enter your guess:  99\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too high! Try a lower number.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attempt 3: Enter your guess:  45\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too high! Try a lower number.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attempt 4: Enter your guess:  33\\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input! Please enter a valid number.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attempt 5: Enter your guess:  22\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Too low! Try a higher number.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attempt 6: Enter your guess:  44\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your Solution Here\n"
+    "import random\n",
+    "\n",
+    "def play_game():\n",
+    "    number_to_guess = random.randint(1, 100)\n",
+    "    attempts = 7\n",
+    "\n",
+    "    print(\"Welcome to the Number Guessing Game!\")\n",
+    "    print(\"Think of a number between 1 and 100.\")\n",
+    "    print(f\"You have {attempts} attempts to guess it.\")\n",
+    "\n",
+    "    for attempt in range(1, attempts + 1):\n",
+    "        try:\n",
+    "            guess = int(input(f\"\\nAttempt {attempt}: Enter your guess: \"))\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input! Please enter a valid number.\")\n",
+    "            continue\n",
+    "\n",
+    "        if guess == number_to_guess:\n",
+    "            print(f\" Congratulations! You guessed the number {number_to_guess} correctly in {attempt} attempts.\")\n",
+    "            break\n",
+    "        elif guess < number_to_guess:\n",
+    "            print(\"Too low! Try a higher number.\")\n",
+    "        else:\n",
+    "            print(\"Too high! Try a lower number.\")\n",
+    "\n",
+    "        if attempt == attempts:\n",
+    "            print(f\"\\n You've used all your attempts. The number was: {number_to_guess}\")\n",
+    "\n",
+    "def main():\n",
+    "    while True:\n",
+    "        play_game()\n",
+    "        play_again = input(\"\\nWould you like to play again? (yes/no): \").strip().lower()\n",
+    "        if play_again not in ['yes', 'y']:\n",
+    "            print(\"Thanks for playing! Goodbye.\")\n",
+    "            break\n",
+    "\n",
+    "main()\n"
    ]
   },
   {
@@ -96,11 +258,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "Buzz\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "Buzz\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "FizzBuzz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "Buzz\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "Buzz\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "FizzBuzz\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your Solution Here\n"
+    "def fizz_buzz():\n",
+    "    for number in range(1, 31):\n",
+    "        if number % 3 == 0 and number % 5 == 0:\n",
+    "            print(\"FizzBuzz\")\n",
+    "        elif number % 3 == 0:\n",
+    "            print(\"Fizz\")\n",
+    "        elif number % 5 == 0:\n",
+    "            print(\"Buzz\")\n",
+    "        else:\n",
+    "            print(number)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    fizz_buzz()\n"
    ]
   },
   {
@@ -142,11 +353,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your Solution Here"
+    "class Vehicle:\n",
+    "    def __init__(self, vehicle_id, brand, rental_price):\n",
+    "        self.__vehicle_id = vehicle_id\n",
+    "        self.__brand = brand\n",
+    "        self.__rental_price = rental_price\n",
+    "\n",
+    "    def get_vehicle_id(self):\n",
+    "        return self.__vehicle_id\n",
+    "\n",
+    "    def get_brand(self):\n",
+    "        return self.__brand\n",
+    "\n",
+    "    def get_rental_price(self):\n",
+    "        return self.__rental_price\n",
+    "\n",
+    "    def calculate_rental_cost(self, days):\n",
+    "        return self.__rental_price * days\n",
+    "\n",
+    "    def display_details(self):\n",
+    "        print(f\"Vehicle ID: {self.__vehicle_id}\")\n",
+    "        print(f\"Brand: {self.__brand}\")\n",
+    "        print(f\"Rental Price per Day: ${self.__rental_price}\")\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def __init__(self, vehicle_id, brand, rental_price, number_of_doors):\n",
+    "        super().__init__(vehicle_id, brand, rental_price)\n",
+    "        self.__number_of_doors = number_of_doors\n",
+    "\n",
+    "    def display_details(self):\n",
+    "        print(\"---- Car Details ----\")\n",
+    "        super().display_details()\n",
+    "        print(f\"Number of Doors: {self.__number_of_doors}\")\n",
+    "\n",
+    "class Bike(Vehicle):\n",
+    "    def __init__(self, vehicle_id, brand, rental_price, bike_type):\n",
+    "        super().__init__(vehicle_id, brand, rental_price)\n",
+    "        self.__bike_type = bike_type\n",
+    "\n",
+    "    def display_details(self):\n",
+    "        print(\"---- Bike Details ----\")\n",
+    "        super().display_details()\n",
+    "        print(f\"Bike Type: {self.__bike_type}\")\n",
+    "\n",
+    "car1 = Car(\"C101\", \"Toyota\", 60, 4)\n",
+    "bike1 = Bike(\"B201\", \"Yamaha\", 30, \"Mountain Bike\")"
    ]
   },
   {
@@ -173,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
