--- a/Assignment/Assignment-02-Jul11.ipynb
+++ b/Assignment/Assignment-02-Jul11.ipynb
@@ -16,22 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "palindrome = lambda s: s == s[::-1]\n",
-    "input_str = \"level\"\n",
+    "palindrome = lambda word:word == word[::-1]\n",
+    "word = \"level\"\n",
     "\n",
-    "print(palindrome(input_str))"
+    "print(palindrome(word))"
    ]
   },
   {
@@ -58,27 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No, Armstrong number.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_armstrong(number):\n",
     "    num_str = str(number)\n",
-    "    num_digits = len(num_str)\n",
+    "    num_words = len(num_str)\n",
     "\n",
-    "    armstrong_sum = sum(int(digit) ** num_digits for digit in num_str)\n",
+    "    armstrong_sum = sum(int(words) ** num_words for words in num_str)\n",
     "    if armstrong_sum == number:\n",
     "        return \"Yes, Armstrong number.\"\n",
     "    else:\n",
     "        return \"No, Armstrong number.\"\n",
+    "        \n",
     "num = int(input(\"Enter a positive integer: \"))\n",
     "\n",
     "if num > 0:\n",
@@ -106,105 +91,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to the Number Guessing Game!\n",
-      "Think of a number between 1 and 100.\n",
-      "You have 7 attempts to guess it.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attempt 1: Enter your guess:  4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too low! Try a higher number.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attempt 2: Enter your guess:  99\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too high! Try a lower number.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attempt 3: Enter your guess:  45\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too high! Try a lower number.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attempt 4: Enter your guess:  33\\\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Invalid input! Please enter a valid number.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attempt 5: Enter your guess:  22\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Too low! Try a higher number.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attempt 6: Enter your guess:  44\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "def play_game():\n",
-    "    number_to_guess = random.randint(1, 100)\n",
+    "def game():\n",
+    "    guess_num = random.randint(1, 100)\n",
     "    attempts = 7\n",
     "\n",
     "    print(\"Welcome to the Number Guessing Game!\")\n",
@@ -218,10 +110,10 @@
     "            print(\"Invalid input! Please enter a valid number.\")\n",
     "            continue\n",
     "\n",
-    "        if guess == number_to_guess:\n",
+    "        if guess == guess_num:\n",
     "            print(f\" Congratulations! You guessed the number {number_to_guess} correctly in {attempt} attempts.\")\n",
     "            break\n",
-    "        elif guess < number_to_guess:\n",
+    "        elif guess < guess_num:\n",
     "            print(\"Too low! Try a higher number.\")\n",
     "        else:\n",
     "            print(\"Too high! Try a lower number.\")\n",
@@ -230,14 +122,13 @@
     "            print(f\"\\n You've used all your attempts. The number was: {number_to_guess}\")\n",
     "\n",
     "def main():\n",
-    "    while True:\n",
-    "        play_game()\n",
-    "        play_again = input(\"\\nWould you like to play again? (yes/no): \").strip().lower()\n",
-    "        if play_again not in ['yes', 'y']:\n",
-    "            print(\"Thanks for playing! Goodbye.\")\n",
-    "            break\n",
+    "    play_again = \"yes\"\n",
+    "    while play_again == \"yes\":\n",
+    "        game()\n",
+    "        play_again = input(\"Do you want to play again? Type 'yes' to continue: \")\n",
+    "    print(\"Thanks for playing! Goodbye.\")\n",
     "\n",
-    "main()\n"
+    "main()"
    ]
   },
   {
@@ -258,46 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "Fizz\n",
-      "4\n",
-      "Buzz\n",
-      "Fizz\n",
-      "7\n",
-      "8\n",
-      "Fizz\n",
-      "Buzz\n",
-      "11\n",
-      "Fizz\n",
-      "13\n",
-      "14\n",
-      "FizzBuzz\n",
-      "16\n",
-      "17\n",
-      "Fizz\n",
-      "19\n",
-      "Buzz\n",
-      "Fizz\n",
-      "22\n",
-      "23\n",
-      "Fizz\n",
-      "Buzz\n",
-      "26\n",
-      "Fizz\n",
-      "28\n",
-      "29\n",
-      "FizzBuzz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fizz_buzz():\n",
     "    for number in range(1, 31):\n",
@@ -353,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,6 +234,7 @@
     "        print(f\"Brand: {self.__brand}\")\n",
     "        print(f\"Rental Price per Day: ${self.__rental_price}\")\n",
     "\n",
+    "\n",
     "class Car(Vehicle):\n",
     "    def __init__(self, vehicle_id, brand, rental_price, number_of_doors):\n",
     "        super().__init__(vehicle_id, brand, rental_price)\n",
@@ -389,6 +244,7 @@
     "        print(\"---- Car Details ----\")\n",
     "        super().display_details()\n",
     "        print(f\"Number of Doors: {self.__number_of_doors}\")\n",
+    "\n",
     "\n",
     "class Bike(Vehicle):\n",
     "    def __init__(self, vehicle_id, brand, rental_price, bike_type):\n",
@@ -400,8 +256,16 @@
     "        super().display_details()\n",
     "        print(f\"Bike Type: {self.__bike_type}\")\n",
     "\n",
+    "\n",
     "car1 = Car(\"C101\", \"Toyota\", 60, 4)\n",
-    "bike1 = Bike(\"B201\", \"Yamaha\", 30, \"Mountain Bike\")"
+    "car1.display_details()\n",
+    "print(\"Total Rental Cost for 5 days:\", car1.calculate_rental_cost(5))\n",
+    "\n",
+    "print(\"\\n\")  \n",
+    "\n",
+    "bike1 = Bike(\"B201\", \"Yamaha\", 30, \"Mountain Bike\")\n",
+    "bike1.display_details()\n",
+    "print(\"Total Rental Cost for 3 days:\", bike1.calculate_rental_cost(3))"
    ]
   },
   {
